--- a/.github/workflows/test-linux-snapcraft.yml
+++ b/.github/workflows/test-linux-snapcraft.yml
@@ -36,13 +36,10 @@ jobs:
           yq --version
 
       - name: Update snapcraft.yaml
-        run: |
-          rm -f snap/snapcraft-arm64.yaml
-          yq -i '.parts.picguard.build-environment[1].FLUTTER_VERSION = "3.24.4"' snap/snapcraft.yaml
+        run: rm -f snap/snapcraft-arm64.yaml
 
       - name: Install snapcraft
-        run: |
-          sudo snap install snapcraft --classic
+        run: sudo snap install snapcraft --classic
 
       - name: Build snap
         run: |
