refactor: remove unused workflows

--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -24,8 +24,7 @@ jobs:
           flutter-version: '3.24.5'
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -62,8 +61,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: android-apk-artifact
-          path: |
-            ./*.apk
+          path: ./*.apk
 
       - name: Clean up
         if: ${{ always() }}
