--- a/.github/workflows/test-windows-msix-pro.yml
+++ b/.github/workflows/test-windows-msix-pro.yml
@@ -15,14 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install yq
-        run: |
-          if ! command -v yq >/dev/null 2>&1; then
-            echo "yq not exists"
-            brew install yq
-          fi
-          yq --version
-
       - name: Set version
         id: version_step
         run: |
@@ -120,8 +112,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-msix-pro-artifact
-          path: |
-            .\build\windows\x64\runner\Release\*.msix
+          path: .\build\windows\x64\runner\Release\*.msix
 
       - name: Clean up
         if: ${{ always() }}
