--- a/.github/workflows/test-ios.yml
+++ b/.github/workflows/test-ios.yml
@@ -13,14 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install yq
-        run: |
-          if ! command -v yq >/dev/null 2>&1; then
-            echo "yq not exists"
-            brew install yq
-          fi
-          yq --version
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -31,8 +23,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -121,8 +112,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: ios-ipa-artifact
-          path: |
-            ./*.ipa
+          path: ./*.ipa
 
       - name: Clean up
         if: ${{ always() }}
