--- a/.github/workflows/test-linux-appimage-arm64.yml
+++ b/.github/workflows/test-linux-appimage-arm64.yml
@@ -37,8 +37,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -68,10 +67,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-appimage-arm64-artifact
-          path: |
-            ./dist/**/*.AppImage
+          path: ./dist/**/*.AppImage
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
