--- a/.github/workflows/test-linux-deb.yml
+++ b/.github/workflows/test-linux-deb.yml
@@ -28,8 +28,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -55,10 +54,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-deb-artifact
-          path: |
-            ./dist/**/*.deb
+          path: ./dist/**/*.deb
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
