--- a/.github/workflows/test-linux-flatpak-arm64.yml
+++ b/.github/workflows/test-linux-flatpak-arm64.yml
@@ -77,8 +77,7 @@ jobs:
           VERSION: ${{ steps.version_step.outputs.version }}
 
       - name: Install QEMU deps
-        run: |
-          dnf -y install docker
+        run: dnf -y install docker
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -98,16 +97,13 @@ jobs:
 
       # Package the build.
       - name: Copy build for flatpak
-        run: |
-          ls -la
+        run: ls -la
 
       - uses: actions/upload-artifact@v4
         with:
           name: linux-flatpak-arm64-artifact
-          path: |
-            ./*.flatpak
+          path: ./*.flatpak
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
