--- a/.github/workflows/test-linux-pacman-arm64.yml
+++ b/.github/workflows/test-linux-pacman-arm64.yml
@@ -31,8 +31,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -62,10 +61,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-pacman-arm64-artifact
-          path: |
-            ./dist/**/*.pacman
+          path: ./dist/**/*.pacman
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
