--- a/.github/workflows/test-linux-pacman.yml
+++ b/.github/workflows/test-linux-pacman.yml
@@ -30,14 +30,12 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
       - name: Install flutter_distributor
-        run: |
-          dart pub global activate flutter_distributor
+        run: dart pub global activate flutter_distributor
 
       - name: Install flutter dependencies
         run: flutter pub get
@@ -58,10 +56,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-pacman-artifact
-          path: |
-            ./dist/**/*.pacman
+          path: ./dist/**/*.pacman
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
