--- a/.github/workflows/test-linux-rpm.yml
+++ b/.github/workflows/test-linux-rpm.yml
@@ -34,8 +34,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -61,10 +60,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-rpm-artifact
-          path: |
-            ./dist/**/*.rpm
+          path: ./dist/**/*.rpm
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
