--- a/.github/workflows/test-linux-tar-arm64.yml
+++ b/.github/workflows/test-linux-tar-arm64.yml
@@ -30,8 +30,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -70,10 +69,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-tar-arm64-artifact
-          path: |
-            ./*.tar.gz
+          path: ./*.tar.gz
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
