--- a/.github/workflows/test-linux-tar.yml
+++ b/.github/workflows/test-linux-tar.yml
@@ -29,8 +29,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -39,19 +38,6 @@ jobs:
 
       - name: Build flutter
         run: flutter build linux --dart-define-from-file=.env --target lib/main_free.dart --target-platform=linux-x64
-
-      - name: Install yq
-        run: |
-          if ! command -v yq >/dev/null 2>&1; then
-            echo "yq not exists"
-            if ! command -v wget >/dev/null 2>&1; then
-              echo "wget not exists"
-              sudo apt install -y wget
-            fi
-            wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
-            chmod +x /usr/bin/yq
-          fi
-          yq --version
 
       - name: Build tar
         run: |
@@ -70,10 +56,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-tar-artifact
-          path: |
-            ./*.tar.gz
+          path: ./*.tar.gz
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
