--- a/.github/workflows/test-linux-zip-arm64.yml
+++ b/.github/workflows/test-linux-zip-arm64.yml
@@ -30,8 +30,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -57,10 +56,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-zip-arm64-artifact
-          path: |
-            ./dist/**/*.zip
+          path: ./dist/**/*.zip
 
       - name: Clean up
         if: ${{ always() }}
-        run: |
-          rm -f .env
+        run: rm -f .env
