--- a/.github/workflows/test-macos-dmg.yml
+++ b/.github/workflows/test-macos-dmg.yml
@@ -28,8 +28,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -105,14 +104,6 @@ jobs:
       - name: Install appdmg
         run: npm install -g appdmg
 
-      - name: Install yq
-        run: |
-          if ! command -v yq >/dev/null 2>&1; then
-            echo "yq not exists"
-            brew install yq
-          fi
-          yq --version
-
       - name: Build DMG
         run: bash scripts/build-dmg.sh
 
@@ -128,8 +119,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: macos-dmg-artifact
-          path: |
-            ./*.dmg
+          path: ./*.dmg
 
       - name: Clean up
         if: ${{ always() }}
