--- a/.github/workflows/test-macos-pkg-appstore.yml
+++ b/.github/workflows/test-macos-pkg-appstore.yml
@@ -23,8 +23,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -112,14 +111,6 @@ jobs:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY }}
         working-directory: build/macos/Build/Products/Release
 
-      - name: Install yq
-        run: |
-          if ! command -v yq >/dev/null 2>&1; then
-            echo "yq not exists"
-            brew install yq
-          fi
-          yq --version
-
       - name: Set version
         id: version_step
         run: |
@@ -141,8 +132,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: macos-pkg-appstore-artifact
-          path: |
-            ./build/macos/Build/Products/Release/*.pkg
+          path: ./build/macos/Build/Products/Release/*.pkg
 
       - name: Clean up
         if: ${{ always() }}
