--- a/.github/workflows/test-macos-zip.yml
+++ b/.github/workflows/test-macos-zip.yml
@@ -13,13 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install p7zip
-        run: |
-          if ! command -v 7z >/dev/null 2>&1; then
-            echo "7z not exists"
-            brew install p7zip
-          fi
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -30,8 +23,7 @@ jobs:
         run: flutter doctor -v
 
       - name: Configure .env
-        run: |
-          echo "$ENV_KEY" | base64 --decode > .env
+        run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
@@ -104,20 +96,19 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
-      - name: Install yq
-        run: |
-          if ! command -v yq >/dev/null 2>&1; then
-            echo "yq not exists"
-            brew install yq
-          fi
-          yq --version
-
       - name: Set version
         id: version_step
         run: |
           VERSION=$(yq '.version' pubspec.yaml)
           echo "$VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Install p7zip
+        run: |
+          if ! command -v 7z >/dev/null 2>&1; then
+            echo "7z not exists"
+            brew install p7zip
+          fi
 
       - name: Build zip
         run: |
@@ -137,8 +128,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: macos-zip-artifact
-          path: |
-            ./build/macos/Build/Products/Release/*.zip
+          path: ./build/macos/Build/Products/Release/*.zip
 
       - name: Clean up
         if: ${{ always() }}
