--- a/.github/workflows/test-windows-exe.yml
+++ b/.github/workflows/test-windows-exe.yml
@@ -107,8 +107,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-exe-artifact
-          path: |
-            .\dist\**\*.exe
+          path: .\dist\**\*.exe
 
       - name: Clean up
         if: ${{ always() }}
