--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,7 @@ android {
     // https://developer.android.com/build/configure-apk-splits
     splits {
         abi {
-            enable true
+            enable false
             reset()
             universalApk true  // If true, also generate a universal APK
             include "armeabi-v7a", "arm64-v8a", "x86_64"
