Update metainfo for F-Droid

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,6 +145,14 @@ android {
             useLegacyPackaging true
         }
     }
+
+    // Required by F-Droid
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles.
+        includeInBundle = false
+    }
 }
 
 flutter {
