--- a/.github/workflows/test-linux-deb-arm64.yml
+++ b/.github/workflows/test-linux-deb-arm64.yml
@@ -15,9 +15,9 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt update
-          sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
-          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
 
       - name: Setup Flutter
         shell: bash
