--- a/.github/workflows/test-linux-pacman.yml
+++ b/.github/workflows/test-linux-pacman.yml
@@ -15,10 +15,10 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt update
-          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-          sudo apt install -y locate libfuse2
-          sudo apt install -y libarchive-tools
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y locate libfuse2 libarchive-tools
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
