--- a/snap/snapcraft-arm64.yaml
+++ b/snap/snapcraft-arm64.yaml
@@ -11,7 +11,7 @@ description: |
   Download **PicGuard** today and take control of your photo security and personalization like never before!
 icon: snap/gui/picguard.png
 title: PicGuard
-contact: kjxbyz888@outlook.com
+contact: hello@kjxbyz.com
 license: GPL-3.0-only
 source-code: https://github.com/picguard/picguard
 issues: https://github.com/picguard/picguard/issues
